--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
   </head>
   <body>
     <div class="display">
-      <button class="rock">Rock</button>
-      <button class="paper">Paper</button>
-      <button class="scissors">Scissors</button>
+      <div class="choices">
+        <button class="rock">Rock</button>
+        <button class="paper">Paper</button>
+        <button class="scissors">Scissors</button>
+      </div>
+      <div class="result">
+        <div>Results</div>
+      </div>
     </div>
-    <div class="result"></div>
     <script src="script.js"></script>
   </body>
 </html>
