wiped off some cobwebs,rounds work

--- a/index.html
+++ b/index.html
@@ -10,13 +10,17 @@
   </head>
   <body>
     <div class="display">
+      <h1 class="finalResults"></h1>
       <div class="choices">
         <button class="rock">Rock</button>
         <button class="paper">Paper</button>
         <button class="scissors">Scissors</button>
       </div>
-      <div class="result">
-        <div>Results</div>
+      <div class="resultContainer">
+        <div class="result">Results</div>
+        <div class="score">
+          <div class="playerScore">Your Score: 0</div>
+          <div class="computerScore">Computer Score: 0</div>
       </div>
     </div>
     <script src="script.js"></script>
