--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="display">
-      <h1 class="finalResults"></h1>
+      <h1 class="finalResults">Rock, Paper, Scissors!</h1>
       <div class="choices">
         <button class="rock">Rock</button>
         <button class="paper">Paper</button>
